environments/example-credentials/services/orderqueryms/base/config/deployment.yaml
---
# Source: orderqueryms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "order-query-ms"
  labels:
    chart: 'orderqueryms-1.0.0'
    app.kubernetes.io/part-of: refarch-kc
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: "orderqueryms-selector"
  template:
    metadata:
      labels:
        app: "orderqueryms-selector"
        version: "current"
    spec:
      serviceAccountName: kcontainer-runtime
      containers:
      - name: "orderqueryms"
        image: "ibmcase/kcontainer-order-query-ms:latest"
        imagePullPolicy: Always

        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20

        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
