environments/example-credentials/services/orderqueryms/base/config/route.yaml
---
# Source: orderqueryms/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-order-query
  labels:
    chart: 'orderqueryms-1.0.0'
spec:
  # Not a required attribute but ArgoCD fails sync without this field included in the YAML
  # host: kcontainer-order-query-[project].[cluster-domain]
  path: /
  to:
    kind: Service
    name: "orderqueryms-service"
    weight: 100
  port:
    targetPort: http
# Not a required attribute but ArgoCD fails sync without this field included in the YAML
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
    # host: kcontainer-order-query-[project].[cluster-domain]
    routerName: router
    wildcardPolicy: None
